<resources>
    <string name="app_name">FOSS Browser</string>
    <string name="app_ok">OK</string>
    <string name="app_cancel">Cancel</string>
    <string name="list_empty">Current list is empty</string>
    <string name="album_title_bookmarks">Bookmarks</string>
    <string name="album_title_history">History</string>
    <string name="album_title_home">Home</string>
    <string name="album_title_tab">Opened Tabs</string>
    <string name="album_title_files">Files</string>
    <string name="search_hint">Search</string>
    <string name="color_red">Red</string>
    <string name="color_pink">Pink</string>
    <string name="color_purple">Purple</string>
    <string name="color_blue">Blue</string>
    <string name="color_teal">Teal</string>
    <string name="color_green">Green</string>
    <string name="color_lime">Lime</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_orange">Orange</string>
    <string name="color_brown">Brown</string>
    <string name="color_grey">Grey</string>
    <string name="main_menu_tabPreview">Open tab preview</string>
    <string name="main_menu_new_tab">New tab (background)</string>
    <string name="main_menu_new_tabOpen">New tab (foreground)</string>
    <string name="main_omnibox_input_hint">Search or type URL</string>
    <string name="menu_open_with">Open link with …</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_openFav">Open Favorite</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_delete_list">Delete list</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_closeTab">Close tab</string>
    <string name="menu_download">Open downloads</string>
    <string name="menu_fav">Save as favorite</string>
    <string name="menu_sc">Shortcut on home screen</string>
    <string name="menu_sort">Sort by …</string>
    <string name="menu_filter">Filter by …</string>
    <string name="menu_share_link">Share link</string>
    <string name="menu_save_home">Save at Home</string>
    <string name="menu_save_bookmark">Save as bookmark</string>
    <string name="menu_save_as">Save as …</string>
    <string name="menu_save_pdf">Save as PDF</string>
    <string name="menu_shareClipboard">Copy to clipboard</string>
    <string name="menu_other_searchSite">Search on site</string>
    <string name="menu_other_info">About \"FOSS Browser\"</string>
    <string name="menu_other_help">Help</string>
    <string name="dialog_title_hint">Title:</string>
    <string name="dialog_extension_hint">Extension (for example: \".jpg\"):</string>
    <string name="dialog_sign_in_username">Username</string>
    <string name="dialog_sign_in_password">Password</string>
    <string name="dialog_title_download">Do you want to download the file?</string>
    <string name="dialog_content_resubmission">Would you like to resubmit your data?</string>
    <string name="dialog_content_ssl_error">The certificate of the site is not trusted. Proceed anyway?</string>
    <string name="dialog_sortName">Sort by name</string>
    <string name="dialog_sortIcon">Sort by icon</string>
    <string name="dialog_sortDate">Sort by date</string>
    <string name="setting_label">Settings</string>
    <string name="setting_title_browser">Browser Settings</string>
    <string name="setting_title_clear_control">Data Control</string>
    <string name="setting_title_start_control">Start Control</string>
    <string name="setting_summary_clear_control">Clear your browser data or decide what data will be cleared when you leave
    the application.</string>
    <string name="setting_summary_start_control">Decide which components of the browser will be enabled on start.</string>
    <string name="setting_title_search_engine">Search Engine</string>
    <string name="setting_summary_search_engine">Here you can choose your preferred search engine or set a custom one.</string>
    <string name="setting_summary_search_engine_google">Google</string>
    <string name="setting_summary_search_engine_duckduckgo">DuckDuckGo</string>
    <string name="setting_summary_search_engine_startpage">StartPage</string>
    <string name="setting_summary_search_engine_bing">Bing</string>
    <string name="setting_summary_search_engine_baidu">Baidu</string>
    <string name="setting_summary_search_engine_startpage_de">StartPage (de)</string>
    <string name="setting_summary_search_engine_searx">Searx</string>
    <string name="setting_summary_search_engine_qwant">Qwant</string>
    <string name="setting_summary_search_engine_ecosia">Ecosia</string>
    <string name="setting_title_inverted">Inverted colors</string>
    <string name="setting_summary_inverted">If checked, content will be rendered in a inverted grey scale mode. This
    is a kind of \"night mode\".</string>
    <string name="setting_title_font">Font size</string>
    <string name="setting_summary_font">Change the font size for displaying websites.</string>
    <string name="setting_title_remote">Remote content</string>
    <string name="setting_summary_remote">Enable remote content, which is not directly from the website you are visiting.
        Disabling this is more secure, faster and saves data volume. But some content will not be displayed anymore.</string>
    <string name="setting_title_save_data">Request \'Save Data\'</string>
    <string name="setting_summary_save_data">Tell websites that you would prefer to save data. Supported websites will load faster.</string>
    <string name="setting_title_images">Images</string>
    <string name="setting_summary_images">Enable Network images. Disabling could be useful to save mobile data and to load
    websites faster.</string>
    <string name="setting_title_cookie">Cookies</string>
    <string name="setting_summary_cookie_delete">If enabled, all cookies will be deleted. Also the Cookies of trusted websites.</string>
    <string name="setting_summary_cookie">Enable Cookies. Cookies are small text files, which are stored on your device. Websites
    use them for example to store user settings (for example search settings). But they could also be used to collect personal
        user data. Third party cookies (they collect user data for advertising) are always disabled.</string>
    <string name="setting_title_whitelistCookie">Cookie whitelist</string>
    <string name="setting_title_whitelistRemote">Remote whitelist</string>
    <string name="setting_title_javascript">JavaScript</string>
    <string name="setting_summary_javascript">Enable JavaScript. Many websites need JavaScript for their functionality (menus,
        loading and displaying images, …). But they are also a risk and can be used for attacks.</string>
    <string name="setting_title_whitelistJS">JavaScript whitelist</string>
    <string name="setting_title_adblock">AdBlock</string>
    <string name="setting_summary_adblock">Enable AdBlock to block annoying ads. Sites also load faster when enabled.</string>
    <string name="setting_title_whitelist">AdBlock whitelist</string>
    <string name="setting_title_location">Location</string>
    <string name="setting_summary_location">Allow websites to access your location. Some websites (like Google maps for navigation)
        need this enabled.</string>
    <string name="setting_title_history">History</string>
    <string name="setting_summary_history">Save the history of visited websites.</string>
    <string name="data_summary">All files will be exported to the \"Android/data/de.baumann.browser/files/browser_backup/\"
        directory of your sd-card. This directory will be DELETED, if you uninstall \"FOSS Browser\". So make a backup regularly on a save
        place.</string>
    <string name="clear_title_quit">Clear when application exits</string>
    <string name="clear_summary_quit">Every time you quit \"FOSS Browser\" all above checked data will be deleted.</string>
    <string name="clear_title_cache">Clear Cache</string>
    <string name="clear_title_cookie">Clear Cookies</string>
    <string name="clear_title_history">Clear History</string>
    <string name="clear_title_indexedDB">Clear \"indexed databases\" and \"local webview storage\"</string>
    <string name="clear_title_deleteDatabase">Delete database</string>
    <string name="clear_summary_deleteDatabase">Delete the whole database (Startpage, bookmarks, history and all whitelists).</string>
    <string name="setting_title_app">App Settings</string>
    <string name="setting_title_ui">Behavior/UI</string>
    <string name="setting_title_data">Backup</string>
    <string name="setting_summary_ui">Change the behavior and ui of the app to suit your preferences.</string>
    <string name="setting_summary_data">Import and export several app data (whitelists, bookmarks).</string>
    <string name="setting_filter">Bookmark filter</string>
    <string name="setting_filter_summary">To show the filter dialog long press on the bookmark icon in the overview. Decide which
        filters you will use.</string>
    <string name="setting_title_fav">Favorite</string>
    <string name="setting_summary_fav">Here you can change the default website which loads on start of \"FOSS Browser\".
    Enter \"about:blank\" to get an emty start site.</string>
    <string name="setting_title_searchEngine">Custom search engine</string>
    <string name="setting_summary_searchEngine">Here you can enter a custom search URL. Also choose \"Custom search engine\" as search
    provider.</string>
    <string name="setting_title_userAgent">Custom user agent</string>
    <string name="setting_summary_userAgent">Here you can enter a custom user agent. Let empty to use default one.</string>
    <string name="setting_title_hideToolbar">Hide toolbar</string>
    <string name="setting_summary_hide">Use the whole screen when scrolling through websites. If you press the back button you will
    leave fullscreen mode.</string>
    <string name="setting_theme">Theme</string>
    <string name="setting_theme_summary">Set the app theme.</string>
    <string name="setting_theme_system">System theme</string>
    <string name="setting_theme_light">Light theme</string>
    <string name="setting_theme_dark">Dark theme</string>
    <string name="setting_title_theme">UI</string>
    <string name="setting_title_behavior">Behavior</string>
    <string name="setting_summary_toolbarShow">Pressing back will make the toolbar visible, before going back in history.</string>
    <string name="setting_title_toolbarShow">First toolbar</string>
    <string name="setting_title_nav">Navigation button</string>
    <string name="setting_title_nav_pos">Position</string>
    <string name="setting_summary_nav_pos">Decide where the \"Navigation Button\" will be placed.</string>
    <string name="setting_summary_nav_pos_right">Right</string>
    <string name="setting_summary_nav_pos_left">Left</string>
    <string name="setting_summary_nav_pos_center">Center</string>
    <string name="setting_summary_nav_pos_null">Never show</string>
    <string name="setting_title_confirm_exit">Confirm browser exit</string>
    <string name="setting_title_confirm_tab_close">Confirm tab close</string>
    <string name="setting_title_toolbar">Toolbar</string>
    <string name="setting_gesture_up">Swipe up</string>
    <string name="setting_gesture_down">Swipe down</string>
    <string name="setting_gesture_left">Swipe left</string>
    <string name="setting_gesture_right">Swipe right</string>
    <string name="setting_title_export_appData">Export app data</string>
    <string name="setting_title_import_appData">Import app data</string>
    <string name="setting_summary_export_appData">Export app data (Startpage + previews, History, Bookmarks)
        and your personal settings.</string>
    <string name="title_appData">App data</string>
    <string name="setting_title_others">Others</string>
    <string name="whitelist_edit_hint">Domain</string>
    <string name="whitelist_add">Add</string>
</resources>