<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference android:key="sp_clear_cache"
        android:defaultValue="false"
        android:title="@string/clear_title_cache"/>

    <CheckBoxPreference android:key="sp_clear_history"
        android:defaultValue="false"
        android:title="@string/clear_title_history"/>

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="sp_clearIndexedDB"
        android:title="@string/clear_title_indexedDB"
        app:singleLineTitle="false" />

    <CheckBoxPreference android:key="sp_clear_cookie"
        android:defaultValue="false"
        android:title="@string/clear_title_cookie"
        android:summary="@string/setting_summary_cookie_delete"/>

    <CheckBoxPreference android:key="sp_clear_quit"
        android:defaultValue="false"
        android:title="@string/clear_title_quit"
        android:summary="@string/clear_summary_quit"/>

    <Preference android:key="sp_deleteDatabase"
        android:title="@string/clear_title_deleteDatabase"
        android:summary="@string/clear_summary_deleteDatabase"/>


</PreferenceScreen>