<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/setting_theme">

    <ListPreference
        android:key="sp_theme"
        android:defaultValue="1"
        android:entries="@array/setting_entries_theme"
        android:entryValues="@array/setting_values_theme"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_title_behavior">

        <CheckBoxPreference
            android:key="hideToolbar"
            android:defaultValue="true"
            android:title="@string/setting_title_hideToolbar"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="sp_close_browser_confirm"
            android:title="@string/setting_title_confirm_exit"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="sp_close_tab_confirm"
            android:title="@string/setting_title_confirm_tab_close"/>

    </PreferenceCategory>

</PreferenceScreen>