<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/setting_title_toolbar">

        <ListPreference
            android:title="@string/setting_gesture_up"
            android:key="setting_gesture_tb_up"
            android:defaultValue="13"
            android:entries="@array/setting_entries_gestures"
            android:entryValues="@array/setting_values_gestures" />

        <ListPreference
            android:title="@string/setting_gesture_down"
            android:key="setting_gesture_tb_down"
            android:defaultValue="01"
            android:entries="@array/setting_entries_gestures"
            android:entryValues="@array/setting_values_gestures" />

        <ListPreference
            android:title="@string/setting_gesture_left"
            android:key="setting_gesture_tb_left"
            android:defaultValue="07"
            android:entries="@array/setting_entries_gestures"
            android:entryValues="@array/setting_values_gestures" />

        <ListPreference
            android:title="@string/setting_gesture_right"
            android:key="setting_gesture_tb_right"
            android:defaultValue="06"
            android:entries="@array/setting_entries_gestures"
            android:entryValues="@array/setting_values_gestures" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_title_toolbar_buttons">

        <ListPreference
            android:title="@string/setting_gesture_up"
            android:key="setting_gesture_nav_up"
            android:defaultValue="04"
            android:entries="@array/setting_entries_gestures"
            android:entryValues="@array/setting_values_gestures" />

        <ListPreference
            android:title="@string/setting_gesture_down"
            android:key="setting_gesture_nav_down"
            android:defaultValue="05"
            android:entries="@array/setting_entries_gestures"
            android:entryValues="@array/setting_values_gestures" />

        <ListPreference
            android:title="@string/setting_gesture_left"
            android:key="setting_gesture_nav_left"
            android:defaultValue="03"
            android:entries="@array/setting_entries_gestures"
            android:entryValues="@array/setting_values_gestures" />

        <ListPreference
            android:title="@string/setting_gesture_right"
            android:key="setting_gesture_nav_right"
            android:defaultValue="02"
            android:entries="@array/setting_entries_gestures"
            android:entryValues="@array/setting_values_gestures" />

    </PreferenceCategory>

</PreferenceScreen>