<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/view3">

            <androidx.appcompat.widget.Toolbar
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimaryDark" />

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText android:id="@+id/whitelist_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/whitelist_edit_hint"
                android:textCursorDrawable="@null"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:selectAllOnFocus="true"
                android:importantForAutofill="no" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/whitelist_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/whitelist_add"
                android:textAllCaps="true"
                android:ellipsize="end"
                android:includeFontPadding="false"
                android:maxLines="1"/>

        </LinearLayout>

        <ListView android:id="@+id/whitelist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawSelectorOnTop="true"/>

        <TextView android:id="@+id/whitelist_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_gravity="center|top"
            android:gravity="center"
            android:text="@string/list_empty"
            android:textAllCaps="false"
            android:textColor="@color/color_hint"
            android:visibility="gone"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>