<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="20dp"
    android:paddingStart="20dp"
    android:paddingTop="20dp"
    tools:ignore="Autofill,Overdraw">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <ImageView
            android:id="@+id/edit_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:contentDescription="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/circle_red_big"
            android:background="?attr/actionBarItemBackground" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/edit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/dialog_title_hint" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_userName_layout"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/edit_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/dialog_sign_in_username" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_PW_layout"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/edit_PW"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/dialog_sign_in_password" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">
    <com.google.android.material.chip.Chip
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:id="@+id/edit_bookmark_desktopMode"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:chipEndPadding="4dp"
        app:chipIcon="@drawable/icon_desktop"
        app:chipIconEnabled="true"
        app:chipStartPadding="4dp"
        app:textEndPadding="0dp"
        app:textStartPadding="0dp" />

    <com.google.android.material.chip.Chip
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:id="@+id/edit_bookmark_Javascript"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:chipEndPadding="4dp"
        app:chipIcon="@drawable/icon_java"
        app:chipIconEnabled="true"
        app:chipStartPadding="4dp"
        app:textEndPadding="0dp"
        app:textStartPadding="0dp" />

    <com.google.android.material.chip.Chip
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:id="@+id/edit_bookmark_RemoteContent"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:chipEndPadding="4dp"
        app:chipIcon="@drawable/icon_remote"
        app:chipIconEnabled="true"
        app:chipStartPadding="4dp"
        app:textEndPadding="0dp"
        app:textStartPadding="0dp" />
    </LinearLayout>
</LinearLayout>